# exchange-engine

./: .gitignore  CMakeLists.txt  README.md
apps/engine/: EngineAppConfig.cpp  EngineAppConfig.hpp  main.cpp
bench/: BenchSupport.hpp  Workloads.hpp  broker_loop_benchmark.cpp  core_benchmark.cpp  runtime_benchmark.cpp
bench-harness/: README.md  common.sh  run-all.sh  run-broker-loop.sh  run-core.sh  run-runtime.sh
docs/: README.md  configuration.md  engine-app-smoke.md  engine-architecture.excalidraw  engine-contract.md  engine-system-plan.md  exchange-e2e.md  fake-engine-smoke.md  ledger.md  local-development.md  matching-engine-deep-dive.md  orderbook.md  timeseries.md  websocket.md
docs/examples/: README.md  exchange-e2e-markets.conf
docs/reference/crates/protocol/src/: engine.rs
include/adapter/: EngineAdapter.hpp
include/apps/engine/: EngineAppConfig.hpp
include/broker/: RedpandaEngineApp.hpp
include/broker/rdkafka/: RdKafkaEngineBroker.hpp
include/checkpoint/: CheckpointCodec.hpp  EngineCheckpoint.hpp  EngineCheckpointManager.hpp  ICheckpointStore.hpp  InMemoryCheckpointStore.hpp
include/checkpoint/file/: FileCheckpointStore.hpp
include/checkpoint/s3/: S3CheckpointStore.hpp
include/core/: Command.hpp  EngineCore.hpp  Event.hpp  FarPriceMap.hpp  FixedPoint.hpp  IdempotencyIndex.hpp  Order.hpp  OrderBook.hpp  PriceLevel.hpp  RingPriceLadder.hpp  SequenceGenerator.hpp  SideBook.hpp  Snapshot.hpp  SymbolConfig.hpp  Types.hpp
include/protocol/: Json.hpp  Message.hpp
include/recovery/: RecoveryCoordinator.hpp
include/runtime/: EngineEventTranslator.hpp  EngineInputParser.hpp  EngineOutbox.hpp  EnginePayloadValue.hpp  EngineRuntime.hpp  EngineRuntimeConfig.hpp
include/services/: FakeEngineSmoke.hpp  Ledger.hpp  OrderbookProjector.hpp  ProtocolMessage.hpp  Timeseries.hpp  WebsocketFanout.hpp
scripts/: engine-smoke.sh
src/adapter/: EngineAdapter.cpp
src/app/: EngineAppConfig.cpp  EngineAppConfig.hpp  main.cpp
src/apps/engine/: EngineAppConfig.cpp
src/broker/: RedpandaEngineApp.cpp
src/broker/rdkafka/: RdKafkaEngineBroker.cpp
src/checkpoint/: EngineCheckpointManager.cpp  InMemoryCheckpointStore.cpp
src/checkpoint/file/: FileCheckpointStore.cpp
src/checkpoint/s3/: S3CheckpointStore.cpp
src/core/: EngineCore.cpp  FarPriceMap.cpp  FixedPoint.cpp  IdempotencyIndex.cpp  OrderBook.cpp  PriceLevel.cpp  RingPriceLadder.cpp  SequenceGenerator.cpp  SideBook.cpp  Validation.cpp  Validation.hpp
src/protocol/: Json.cpp  Message.cpp
src/recovery/: RecoveryCoordinator.cpp
src/runtime/: EngineEventTranslator.cpp  EngineInputParser.cpp  EngineOutbox.cpp  EngineOutputSerializer.cpp  EngineOutputSerializer.hpp  EngineRuntime.cpp
src/services/: FakeEngineSmoke.cpp  Ledger.cpp  OrderbookProjector.cpp  Timeseries.cpp  WebsocketFanout.cpp
test-harness/: README.md  exchange-e2e-markets.conf  run-exchange-e2e-engine.sh  smoke.sh
tests/adapter/: AdapterTests.cpp
tests/app/: EngineAppConfigTests.cpp
tests/apps/engine/: EngineAppConfigTests.cpp
tests/broker/: RedpandaEngineAppTests.cpp
tests/broker/rdkafka/: RdKafkaBackendTests.cpp
tests/checkpoint/: CheckpointTests.cpp
tests/checkpoint/file/: FileCheckpointStoreTests.cpp
tests/checkpoint/s3/: S3CheckpointStoreTests.cpp
tests/protocol/: protocol_fixture_tests.cpp
tests/recovery/: RecoveryCoordinatorTests.cpp
tests/runtime/: EngineOutputSerializerTests.cpp  RuntimePlaceOrderTests.cpp
tests/services/: ServiceContractsTest.cpp
tests/smoke/: EngineSmoke.cpp
